--- a/ClientApp/src/app/sidebar/item/item.component.css
+++ b/ClientApp/src/app/sidebar/item/item.component.css
@@ -6,3 +6,10 @@
   font-weight: 600;
   margin-bottom: 10px;
 }
+
+.item-name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 170px;
+}
